Le agrego una conexion con el link que trabajaremos juntao a a iteracion

--- a/Trabajo_Grupal_final.ipynb
+++ b/Trabajo_Grupal_final.ipynb
@@ -308,7 +308,220 @@
       "1 : UBASH3A\n",
       "1 : RSPH1\n",
       "1 : SLC37A1\n",
-      "1 : PDE9A\n"
+      "1 : PDE9A\n",
+      "1 : WDR4\n",
+      "1 : NDUFV3\n",
+      "1 : PKNOX1\n",
+      "1 : ADARB1\n",
+      "1 : POFUT2\n",
+      "1 : COL18A1\n",
+      "1 : SLC19A1\n",
+      "1 : PCBP3\n",
+      "1 : LOC102190823\n",
+      "1 : COL6A1\n",
+      "1 : COL6A2\n",
+      "1 : FTCD\n",
+      "1 : SPATC1L\n",
+      "1 : LSS\n",
+      "1 : MCM3AP\n",
+      "1 : YBEY\n",
+      "1 : C1H21orf58\n",
+      "1 : PCNT\n",
+      "1 : LOC108636576\n",
+      "1 : LOC102169226\n",
+      "1 : DIP2A\n",
+      "1 : S100B\n",
+      "1 : PRMT2\n",
+      "1 : FBXO25\n",
+      "1 : TDRP\n",
+      "1 : LOC102177758\n",
+      "1 : DAZL\n",
+      "1 : PLCL2\n",
+      "1 : TBC1D5\n",
+      "1 : TRNAW-CCA\n",
+      "1 : SATB1\n",
+      "1 : KCNH8\n",
+      "1 : LOC106503629\n",
+      "1 : C2H1orf64\n",
+      "1 : CLCNKA\n",
+      "1 : HSPB7\n",
+      "1 : FAM131C\n",
+      "1 : LOC102181451\n",
+      "1 : EPHA2\n",
+      "1 : LOC108637009\n",
+      "1 : ARHGEF19\n",
+      "1 : RSG1\n",
+      "1 : FBXO42\n",
+      "1 : LOC102179430\n",
+      "1 : SZRD1\n",
+      "1 : SPATA21\n",
+      "1 : NECAP2\n",
+      "1 : CROCC\n",
+      "1 : LOC102183471\n",
+      "1 : SDHB\n",
+      "1 : PADI2\n",
+      "1 : LOC108637078\n",
+      "1 : PADI1\n",
+      "1 : PADI3\n",
+      "1 : PADI4\n",
+      "1 : LOC102174173\n",
+      "1 : PADI6\n",
+      "1 : RCC2\n",
+      "1 : LOC108638510\n",
+      "1 : LOC108637086\n",
+      "1 : LOC102173345\n",
+      "1 : LOC108637091\n",
+      "1 : ACTL8\n",
+      "1 : LOC108638512\n",
+      "1 : IGSF21\n",
+      "1 : RAP1GAP\n",
+      "1 : USP48\n",
+      "1 : LDLRAD2\n",
+      "1 : HSPG2\n",
+      "1 : LOC102188368\n",
+      "1 : LOC108638631\n",
+      "1 : LOC102188098\n",
+      "1 : LOC102189078\n",
+      "1 : CDC42\n",
+      "1 : WNT4\n",
+      "1 : ZBTB40\n",
+      "1 : LOC106503564\n",
+      "1 : EPHA8\n",
+      "1 : C1QA\n",
+      "1 : C1QC\n",
+      "1 : LOC102187088\n",
+      "1 : C1QB\n",
+      "1 : EPHB2\n",
+      "1 : LACTBL1\n",
+      "1 : C2H1orf234\n",
+      "1 : KDM1A\n",
+      "1 : LUZP1\n",
+      "1 : LOC102185130\n",
+      "1 : HTR1D\n",
+      "1 : LOC108637154\n",
+      "1 : HNRNPR\n",
+      "1 : ZNF436\n",
+      "1 : TCEA3\n",
+      "1 : ASAP3\n",
+      "1 : E2F2\n",
+      "1 : ID3\n",
+      "1 : RPL11\n",
+      "1 : MATN1\n",
+      "1 : LAPTM5\n",
+      "1 : SDC3\n",
+      "1 : PUM1\n",
+      "1 : NKAIN1\n",
+      "1 : SNRNP40\n",
+      "1 : ZCCHC17\n",
+      "1 : FABP3\n",
+      "1 : LOC108637396\n",
+      "1 : LOC102173430\n",
+      "1 : SERINC2\n",
+      "1 : LOC102173140\n",
+      "1 : TINAGL1\n",
+      "1 : HCRTR1\n",
+      "1 : PEF1\n",
+      "1 : COL16A1\n",
+      "1 : ADGRB2\n",
+      "1 : LOC108638518\n",
+      "1 : SPOCD1\n",
+      "1 : LOC102172397\n",
+      "1 : PTP4A2\n",
+      "1 : KHDRBS1\n",
+      "1 : TMEM39B\n",
+      "1 : KPNA6\n",
+      "1 : TXLNA\n",
+      "1 : CCDC28B\n",
+      "1 : IQCC\n",
+      "1 : DCDC2B\n",
+      "1 : LOC108637416\n",
+      "1 : TMEM234\n",
+      "1 : EIF3I\n",
+      "1 : LOC102188268\n",
+      "1 : FAM167B\n",
+      "1 : LCK\n",
+      "1 : HDAC1\n",
+      "1 : MARCKSL1\n",
+      "1 : FAM229A\n",
+      "1 : TSSK3\n",
+      "1 : BSDC1\n",
+      "1 : ZBTB8B\n",
+      "1 : ZBTB8A\n",
+      "1 : LOC102185962\n",
+      "1 : ZBTB8OS\n",
+      "1 : RBBP4\n",
+      "1 : SYNC\n",
+      "1 : LOC102184855\n",
+      "1 : LOC108638639\n",
+      "1 : KIAA1522\n",
+      "1 : YARS1\n",
+      "1 : S100PBP\n",
+      "1 : FNDC5\n",
+      "1 : LOC102170100\n",
+      "1 : HPCA\n",
+      "1 : TMEM54\n",
+      "1 : RNF19B\n",
+      "1 : AK2\n",
+      "1 : LOC108638640\n",
+      "1 : AZIN2\n",
+      "1 : LOC106503418\n",
+      "1 : TRIM62\n",
+      "1 : LOC108637483\n",
+      "1 : ZNF362\n",
+      "1 : A3GALT2\n",
+      "1 : PHC2\n",
+      "1 : LOC108637496\n",
+      "1 : EIF4E2\n",
+      "1 : CHRNG\n",
+      "1 : CHRND\n",
+      "1 : PRSS56\n",
+      "1 : ECEL1\n",
+      "1 : LOC102191192\n",
+      "1 : LOC102190876\n",
+      "1 : LOC102190919\n",
+      "1 : LOC102190650\n",
+      "1 : LOC102180168\n",
+      "1 : LOC108633351\n",
+      "1 : LOC102179897\n",
+      "1 : DIS3L2\n",
+      "1 : LOC102189808\n",
+      "1 : CCL20\n",
+      "1 : LOC108638521\n",
+      "1 : SLC19A3\n",
+      "1 : LOC102185410\n",
+      "1 : LOC108638522\n",
+      "1 : AGFG1\n",
+      "1 : LOC108633359\n",
+      "1 : TM4SF20\n",
+      "1 : MFF\n",
+      "1 : COL4A3\n",
+      "1 : COL4A4\n",
+      "1 : RHBDD1\n",
+      "1 : LOC102185131\n",
+      "1 : IRS1\n",
+      "1 : NYAP2\n",
+      "1 : LOC102183016\n",
+      "1 : SLC4A3\n",
+      "1 : STK11IP\n",
+      "1 : LOC102182360\n",
+      "1 : INHA\n",
+      "1 : OBSL1\n",
+      "1 : TMEM198\n",
+      "1 : CHPF\n",
+      "1 : ASIC4\n",
+      "1 : GMPPA\n",
+      "1 : LOC106503182\n",
+      "1 : SPEG\n",
+      "1 : DES\n",
+      "1 : DNPEP\n",
+      "1 : RESP18\n",
+      "1 : LOC102180443\n",
+      "1 : PTPRN\n",
+      "1 : MIR153\n",
+      "1 : DNAJB2\n",
+      "1 : LOC102178119\n",
+      "1 : LOC102177846\n",
+      "1 : STK16\n"
      ]
     }
    ],
@@ -325,7 +538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47a41cf3",
+   "id": "0b571260",
    "metadata": {},
    "source": [
     "#### hacemos una lista que lamaemos indice ,a cua se ira almacenando , debido a que haremos una iteraion con for , la cual nos servirara lueo , esta lista almacenara a todos los valores de genes que fuimos leyendo ,le agregamos un append para que lo agregue "
@@ -338,18 +551,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "link_entry=soup.find_all(\"td\",class_=\"entryID\")  # lista de entradas que aparacen en el resultado de la busqueda\n",
+    "    link_entry=soup.find_all(\"td\",class_=\"entryID\")  # lista de entradas que aparacen en el resultado de la busqueda\n",
     "    indice=[]                      # genera una lista vacia\n",
     "    for P in link_entry:           # para cada entrada que aparece en el resultado de busqueda se almacena en la lista indice \n",
     "        indice.append(P.text)      # añade los resultados a la lista vacia\n",
-    "        \n",
-    "        "
+    "    try:                      # si hay un resultado en el indice va intentar ejecutar el siguiente codigo\n",
+    "        FINAL=indice[0]       # selecciona el primer resultado\n",
+    "        url=f\"https://www.uniprot.org/uniprot/{FINAL}\" # introduce el url del primer resultado\n",
+    "        page=requests.get(url)                      # conección a la pagina\n",
+    "        soup=BeautifulSoup(page.content,\"html.parser\")  # almacena el codigo html"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fa4bbcd",
+   "id": "cb358284",
    "metadata": {},
    "outputs": [],
    "source": []
