--- a/Trabajo_Grupal_final-checkpoint.ipynb
+++ b/Trabajo_Grupal_final-checkpoint.ipynb
@@ -191,19 +191,13 @@
     "        organismo=soup.find_all(\"div\",class_='entry-overview-content',id=\"content-organism\")  # busca todos los elementos que contienen id \"content-organism\", con etiqueta div.\n",
     "        for Q in organismo:    # limpia los resultados\n",
     "            ORGANISMO=Q.text   # extrae unicamente los texto\n",
-    "        \n",
+    "###aumeno la columna status         \n",
     "        #STATUS\n",
     "        status=soup.find_all(\"span\",class_='context-help bin-score tooltipped-click')  # busca todos los elementos, con etiqueta span.\n",
     "        for Q in status:       # limpia los resultados\n",
     "            STATUS_PRE=Q.text   # extrae unicamente los textos\n",
-    "        STATUS=STATUS_PRE.split(\"\\n\")[0].split(\":\")[1]  # selecciona el status de toda esa respuesta\n",
-    "\n",
-    "        #GO BIOLOGICAL PROCESS\n",
-    "        bio_process=soup.find_all(\"a\",onclick=\"window.ga('UniProt-Entry-View', 'click', 'Display-GO-Term');\")  # busca todos los elementos, con etiqueta a\n",
-    "        BIO_PROCESS=[]     # crea una lista\n",
-    "        for Q in bio_process:  # limpia los resultados\n",
-    "            BIO_PROCESS.append(Q.text)  # selecciona los textos y los añade a la lista vacia\n",
-    "        BIO_PROCESS=str(BIO_PROCESS)   # vuelve toda la lista en una cadena"
+    "        STATUS=STATUS_PRE.split(\"\\n\")[].split(\":\")[]  # selecciona el status de toda esa respuesta\n",
+    "\n"
    ]
   },
   {
